database para testes de it, registerUser tests

--- a/hexagonal-example/src/test/resources/application.properties
+++ b/hexagonal-example/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/hexagonal-example
+spring.datasource.url=jdbc:postgresql://localhost:5432/hexagonal-example-it
 spring.datasource.username=postgres
 spring.datasource.password=pg123321
 spring.jpa.show-sql=true
